# xet-shard-parser

./: Cargo.toml  README.md  project.toml  pyproject.toml  test_redb.rs  tests.rs
.github/workflows/: release.yml
src/: lib.rs
