[package]
name = "xet_shard_parser"
version = "0.1.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
mdb_shard = { package = "xet-core-structures", path = "../xet-core/xet_core_structures" }
xet_data = { package = "xet-data", path = "../xet-core/xet_data" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.maturin]
# optional, tells maturin to treat this as Python package
name = "xet-shard-parser"