[package]
name = "xet_shard_parser"
version = "1.0.8"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }

mdb_shard = { package = "xet-core-structures", git = "https://github.com/huggingface/xet-core.git", tag = "v1.4.3" }
xet_data = { package = "xet-data", git = "https://github.com/huggingface/xet-core.git", tag = "v1.4.3" }
xet_runtime = { package = "xet-runtime", git = "https://github.com/huggingface/xet-core.git", tag = "v1.4.3" }
xet_client = { package = "xet-client", git = "https://github.com/huggingface/xet-core.git", tag = "v1.4.3" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redb = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["stream", "rustls-tls"] }

[package.metadata.maturin]
# optional, tells maturin to treat this as Python package
name = "xet-shard-parser"
